Fixed issue with mission div not fitting to image

--- a/resources/stylesheets/styles.css
+++ b/resources/stylesheets/styles.css
@@ -42,6 +42,7 @@ header ul li {
     background-color: black;
     position: relative;
     top: -370px;
+    width: 100%;
 }
 
 #missionbg {
